; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_update_kvm_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_update_kvm_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_event = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_event*, i32, i32)* @update_kvm_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_kvm_event(%struct.kvm_event* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvm_event*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.kvm_event* %0, %struct.kvm_event** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.kvm_event*, %struct.kvm_event** %5, align 8
  %12 = getelementptr inbounds %struct.kvm_event, %struct.kvm_event* %11, i32 0, i32 1
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @kvm_update_event_stats(i32* %12, i32 %13)
  store i32 1, i32* %4, align 4
  br label %30

15:                                               ; preds = %3
  %16 = load %struct.kvm_event*, %struct.kvm_event** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @kvm_event_expand(%struct.kvm_event* %16, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %30

21:                                               ; preds = %15
  %22 = load %struct.kvm_event*, %struct.kvm_event** %5, align 8
  %23 = getelementptr inbounds %struct.kvm_event, %struct.kvm_event* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @kvm_update_event_stats(i32* %27, i32 %28)
  store i32 1, i32* %4, align 4
  br label %30

30:                                               ; preds = %21, %20, %10
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @kvm_update_event_stats(i32*, i32) #1

declare dso_local i32 @kvm_event_expand(%struct.kvm_event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
